syntax = "proto3";

package userpb;
option go_package = "/userpb";

message User {
    string id = 1;
    string name = 2;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string response = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}